/*
Copyright Â© 2021-2022 Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package nocloud.instances;

import "google/protobuf/struct.proto";
import "pkg/hasher/hasherpb/hasher.proto";
import "pkg/states/proto/states.proto";

message Instance {
    string uuid = 1;
    string title = 2;
    map<string, google.protobuf.Value> config = 3
        [(nocloud.hasher.hashed) = true];
    map<string, google.protobuf.Value> resources = 4
        [(nocloud.hasher.hashed) = true];
    map<string, google.protobuf.Value> data = 5;
    nocloud.states.State state = 6;
    string hash = 7 [(nocloud.hasher.hash) = true];
}

message InstancesGroup {
    string uuid = 1;
    string type = 2;
    map<string, google.protobuf.Value> config = 3
        [(nocloud.hasher.hashed) = true];
    repeated Instance instances = 4
        [(nocloud.hasher.hashed) = true];
    map<string, google.protobuf.Value> resources = 5
        [(nocloud.hasher.hashed) = true];
    map<string, google.protobuf.Value> data = 6;
    string hash = 7 [(nocloud.hasher.hash) = true];
}

message TestInstancesGroupConfigRequest {
    InstancesGroup group = 1;
}

message TestInstancesGroupConfigError {
    string error = 1;
    string instance = 2;
}

message TestInstancesGroupConfigResponse {
    bool result = 1;
    repeated TestInstancesGroupConfigError errors = 2;
}